--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "tiktok-ia",
+  "name": "boominum-server",
   "version": "1.0.0",
-  "description": "Kino - rotas IA local",
+  "type": "module",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "groq-sdk": "^0.37.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "@supabase/supabase-js": "^2.43.4",
+    "groq-sdk": "^0.6.0"
   }
 }
